<resources>
    <string name="app_name">Trivia App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="get_trivia">Get Trivia</string>
    <string name="enter_number">Enter Number</string>
    <string name="default_number">01</string>
    <string name="default_long_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s,</string>
    <string name="enter_month">Enter Month</string>
    <string name="enter_day">Enter Day</string>
    <string name="question">Question</string>
    <string name="submit">Submit</string>
    <string name="answer">Answer</string>
    <string name="numbers">Numbers</string>
    <string name="quiz">Quiz</string>
    <string name="welcome_">Welcome,</string>
    <string name="folk_">Folk.</string>
    <string name="type">Type</string>
</resources>